--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         </div>
     </nav>
     <div class="container">
-        <div class="row pt-4" style="text-align: center;">
-            <div class="col-md-2 col-sm-1" id="escom">
+        <div class="row pt-4">
+            <div class="col-md-3" style="text-align: left;">
                 <img id="escom-logo" src="img/EscudoESCOM.png" width="80%" height="60%">
             </div>
-            <div class="col-md-8">
-                <h2 class="text-primary">Registro de Alumnos de Nuevo Ingreso</h2>
-                <h3 class="text-primary">Favor de llenar el siguiente formulario</h3>
+            <div class="col-md-6">
+                <h2 class="text-primary" style="text-align: center;">Registro de Alumnos de Nuevo Ingreso</h2>
+                <h3 class="text-primary" style="text-align: center;">Favor de llenar el siguiente formulario</h3>
             </div>
-            <div class="col-md-2 col-sm-1" id="ipn">
+            <div class="col-md-3" style="text-align: right;">
                 <img id="ipn-logo" src="img/1200px-Logo_Instituto_Politécnico_Nacional.png" width="50%" height="60%">
             </div>
         </div>
@@ -234,9 +234,10 @@
             </form>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>       
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="JS/validacion.js"></script>
 </body>
-<script src="JS/validacion.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>   
 </html>
