--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
         <div class="container-fluid">
-            <a href="index.php" class="navbar-brand">ESCOM | IPN</a>
+            <a href="index.html" class="navbar-brand">ESCOM | IPN</a>
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Recuperar informacion</a>
+                    <a href="recuperacion.php" class="nav-link">Recuperar informacion</a>
                 </li>
             </ul>
             <img src="img/logoESCOMBlanco.png" width="70px" height="60px">
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <form action="result.php" method="post">
-            <div class="card bg-primary">
+                <div class="card bg-primary">
                     <div class="card-header text-white">Identidad</div>
                         <div class="card-body bg-secondary">
                             <div class="row">
