--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html" class="navbar-brand">ESCOM | IPN</a>
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a href="recuperacion.php" class="nav-link">Recuperar informacion</a>
+                    <a href="recuperacion.php" class="nav-link">Recuperar PDF</a>
                 </li>
             </ul>
             <img src="img/logoESCOMBlanco.png" width="70px" height="60px">
@@ -40,8 +40,8 @@
                         <div class="card-body bg-secondary">
                             <div class="row">
                                 <div class="col-md-3 col-sm-12">
-                                    <label>Numero de Boleta</label>
-                                    <input type="text" name="boleta" placeholder="Numero de Boleta" class="form-control" required>
+                                    <label>Número de Boleta</label>
+                                    <input type="text" name="boleta" placeholder="Número de Boleta" class="form-control" required>
                                 </div>
                                 <div class="col-md-3 col-sm-12">
                                     <label>Nombre(s)</label>
@@ -59,7 +59,7 @@
                             <br>
                             <div class="row">
                                 <div class="col-md-3 col-sm-12">
-                                    <label>Fecha de naciemiento</label>
+                                    <label>Fecha de nacimiento</label>
                                     <input type="date" name="fecha" class="form-control" required>
                                 </div>
                                 <div class="col-md-6 col-sm-12">
@@ -94,14 +94,14 @@
                                     <input type="text" name="colonia" placeholder="Colonia" class="form-control" required>
                                 </div>
                                 <div class="col-md-3 col-sm-12">
-                                    <label>Codigo Postal (CP)</label>
-                                    <input type="text" name="cp" placeholder="Codigo Postal" class="form-control" required>
+                                    <label>Código Postal (CP)</label>
+                                    <input type="text" name="cp" placeholder="Código Postal" class="form-control" required>
                                 </div>
                             </div>
                             <br>
                             <div class="row">
                                 <div class="col-md-3 col-sm-12">
-                                    <label>Alcaldia</label>
+                                    <label>Alcaldía</label>
                                     <select class="form-select" name="alcaldia" required>
                                         <option value="Álvaro Obregón" selected>Álvaro Obregón</option>
                                         <option value="Azcapotzalco">Azcapotzalco</option>
@@ -122,11 +122,11 @@
                                     </select>
                                 </div>
                                 <div class="col-md-6 col-sm-12">
-                                    <label>Correo Electronico</label>
-                                    <input type="text" name="correo" placeholder="Correo Electronico" class="form-control" required>
+                                    <label>Correo Electrónico</label>
+                                    <input type="text" name="correo" placeholder="Correo Electrónico" class="form-control" required>
                                 </div>
                                 <div class="col-md-3 col-sm-12">
-                                    <label>Telefono (Celular)</label>
+                                    <label>Teléfono (Celular)</label>
                                     <input type="text" name="tel" placeholder="Numero de Telefono" class="form-control" required>
                                 </div>
                             </div>
